z-index bug navbar

--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,7 @@ nav {
 .navigation-white {
   background-color: #fff;
   box-shadow: 12px 2px 8px 0px black;
-  z-index: 0;
+  z-index: 1;
 }
 
 .navigation-black {
