--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -286,7 +286,7 @@ nav {
 .navigation-white {
     background-color: #fff;
     box-shadow: 12px 2px 8px 0px rgb(0, 0, 0);
-    z-index: 0;
+    z-index: 1;
 }
 
 .navigation-black {
